--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.css-f0xnmk {
+  z-index: 50000 !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
